--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring_fb
 spring.datasource.username=postgres
 spring.datasource.password=root
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
